# KW-Pipeline

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Demo Backend.command  Demo Frontend.command  LICENSE  Makefile  README.md  demo.html  kw-pipeline-landing.html  p2sconfig.json
apps/api/: Dockerfile  openapi.json  pyproject.toml
apps/api/app/: demo.py  demo_loader.py  dependencies.py  errors.py  logging_config.py  main.py  rebackfill.py  routes.py  settings.py
apps/api/app/models/: __init__.py  document.py
apps/api/app/routes/: __init__.py  _helpers.py  admin.py  demo.py  knowledge.py  lifecycle.py  upload.py
apps/api/app/schemas/: __init__.py  admin_archive.py  admin_audit.py  admin_config.py  admin_hitl.py  admin_taxonomy_workflow.py  chunk_location.py  chunk_taxonomy_allocation.py  claim.py  companion.py  companion_feedback.py  demo.py  deterministic_taxonomy.py  document.py  document_confidence.py  document_topic.py  extraction.py  high_value_chunks.py  knowledge.py  knowledge_atlas.py  knowledge_explore_search.py  knowledge_export.py  knowledge_neighborhood.py  knowledge_relations.py  process.py  scope.py  semantic_document.py  taxonomy.py  taxonomy_version.py  validation_metadata.py
apps/api/app/services/: __init__.py  audit_event_store.py  audit_log_handler.py  business_taxonomy_allocator.py  catalog_backup.py  catalog_store.py  chunk_taxonomy_allocation_store.py  claim_extractor.py  claim_store.py  confidence_scorer.py  corpus_norms.py  demo_dataset.py  document_parser.py  document_relations_cache.py  document_relations_store.py  document_service.py  document_similarity_service.py  document_topic_store.py  extraction_job_service.py  extraction_recovery.py  extraction_worker.py  hash_service.py  hitl_auto_promoter.py  hitl_drift_detector.py  hitl_router.py  idempotency_store.py  knowledge_exporter.py  markdown_generator.py  migrations.py  neo4j_backup.py  process_store.py  projection_status_tracker.py  review_service.py  sampling_state_store.py  scope_cascade_service.py  semantic_extractor.py  semantic_generators.py  semantic_output_service.py  semantic_schema_loader.py  sop_extractor.py  (+6 more)
apps/api/app/services/auth/: __init__.py  bearer.py  dependencies.py  dev_mode.py  (+6 more)
apps/api/fixtures/customer_demo/: acme_contract_review_memo.json  acme_quality_program_handbook.txt  acme_supplier_onboarding_policy_v1.txt  acme_supplier_onboarding_policy_v2.txt  customer_success_brief.txt
apps/api/fixtures/demo/: .gitignore  README.md  supplier_quality_policy_v1.txt  supplier_quality_policy_v1_renamed.txt  supplier_quality_policy_v2.txt
apps/api/fixtures/full_demo/: README.md  automotive_adas_l2plus_feature_definition.txt  automotive_battery_hv_architecture.txt  automotive_bom_top_level.txt  automotive_ee_architecture_overview.txt  automotive_vehicle_dynamics_targets.txt  customer_renewal_brief.txt  customer_success_playbook.txt  cyber_tara_hmi.txt  cyber_unece_r155_policy.txt  ecu_software_architecture_v1.txt  ecu_software_architecture_v2.txt  ecu_software_architecture_v3.txt  engineering_change_request_4471.txt  engineering_design_review_minutes.txt  homologation_euro7_emissions_plan.txt  homologation_type_approval_roadmap_eu.txt  manufacturing_body_shop_welding_cell.txt  manufacturing_final_assembly_takt.txt  manufacturing_line_balancing_trim.txt  manufacturing_mes_scada_integration.txt  manufacturing_paint_shop_process_spec.txt  marketing_brand_positioning_suv.txt  marketing_customer_segment_urban_ev.txt  marketing_launch_plan_press_kit.txt  quality_audit_findings_2026q1.txt  quality_corrective_action_log.txt  quality_iso9001_handbook.txt  simulation_cfd_aero_analysis.txt  simulation_crash_frontal_results.txt  simulation_nvh_powertrain.txt  sourcing_dual_sourcing_igbt.txt  sourcing_rfq_inverter.txt  sourcing_tier1_scorecard_q2.txt  supplier_onboarding_policy_v1.txt  supplier_onboarding_policy_v2.txt  supplier_onboarding_policy_v3.txt  supplier_qualification_checklist.txt  taxonomy.yaml  vv_crash_test_plan_euroncap.txt  (+3 more)
apps/api/scripts/: __init__.py  _demo_fixtures.py  customer_demo_smoke.py  export_openapi.py  load_demo_dataset.py  reconcile_knowledge_layer.py  seed_demo.py
apps/api/tests/: conftest.py  test_admin_archive_purge_artifacts.py  test_admin_archive_purge_batch.py  test_admin_archive_relink_scope.py  test_admin_archive_unarchive.py  test_admin_config.py  test_admin_orbital_purge.py  test_admin_reconcile.py  test_api_integration.py  test_audit_actor_backfill.py  test_audit_event_store.py  test_batch_upload.py  test_bm25.py  test_business_taxonomy_allocator.py  test_business_taxonomy_creator.py  test_catalog_backup.py  test_catalog_search.py  test_catalog_store.py  test_chat_service.py  test_chunk_relation_service.py  test_chunk_taxonomy_allocation_store.py  test_claim_extractor.py  test_claim_store.py  test_companion_citation_schema.py  test_companion_feedback_bridge.py  test_companion_trust_gate.py  test_compose_contract.py  test_corpus_emerging.py  test_customer_demo_smoke.py  test_demo_smoke.py  test_demo_startup.py  test_deterministic_taxonomy.py  test_document_origin.py  test_document_parser.py  test_document_relations_cache.py  test_document_similarity_service.py  test_document_topic_store.py  test_document_upload.py  test_documents_pagination.py  test_docx_parser.py  (+99 more)
apps/api/tests/fixtures/: sample.docx  semantic_v0_1.json
apps/api/tests/integration/: test_anthropic_llm_client.py  test_neo4j_graph_store.py  test_reconciliation_integration.py  test_voyage_neo4j_search.py
apps/api/tests/routes/: test_demo.py
apps/api/tests/services/: test_archive_filter.py  test_archived_list_query.py  test_audit_store_list_event_names.py  test_confidence_scorer.py  test_confidence_scorer_wiring.py  test_corpus_norms.py  test_hitl_auto_promoter.py  test_hitl_drift_detector.py  test_hitl_router.py  test_hitl_router_drift_integration.py  test_hitl_sampling_invariants.py  test_sampling_state_list_all_buckets.py  test_sampling_state_store.py  test_scope_cascade.py  test_scope_persistence.py  test_validation_metadata_store.py
(+528 files in other folders)
