[project]
name = "kw-pipeline-api"
version = "0.1.0"
description = "Harvester API for KW Pipeline document ingestion and semantic extraction."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "jinja2==3.1.6",
  # Bolt driver for the optional knowledge layer (ADR-012). Tiny package;
  # `Neo4jGraphStore` is lazy-imported, so unit tests against the in-memory
  # fake do not exercise it. The driver is dormant until KW_NEO4J_URI is set.
  "neo4j>=5.23",
  "pdfplumber>=0.11",
  "pydantic==2.10.6",
  "python-docx>=1.1",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "uvicorn==0.30.6",
]

[project.optional-dependencies]
test = [
  "fpdf2>=2.7",
  "httpx==0.28.1",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config -m 'not integration and not llm_integration'"
markers = [
  "integration: requires a running external service (e.g. Neo4j); opt-in via -m integration",
  "llm_integration: hits a real LLM API; opt-in via -m llm_integration",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F/W: pycodestyle + pyflakes (default). I: isort. UP: pyupgrade.
# B: bugbear (catches a handful of common Python bugs). C4: comprehensions.
# SIM: simplify. Adding rules later is the easy direction.
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses `Depends`, `File`, `Body`, etc. as argument defaults by design;
# these calls return marker objects, not stateful values.
extend-immutable-calls = [
  "fastapi.Body",
  "fastapi.Depends",
  "fastapi.File",
  "fastapi.Form",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
