[project]
name = "kw-pipeline-api"
version = "0.1.0"
description = "Harvester API for KW Pipeline document ingestion and semantic extraction."
requires-python = ">=3.11"
dependencies = [
  # Anthropic Python SDK for the optional knowledge layer Phase 2 (ADR-013).
  # Imported lazily by `AnthropicLLMClient`; unit tests use `FakeLLMClient`
  # so the SDK is never called in the default suite. The extractor refuses
  # to construct without `ANTHROPIC_API_KEY`, so this dep is dormant unless
  # a deployment opts in.
  "anthropic>=0.40",
  "fastapi==0.115.6",
  # Bolt driver for the optional knowledge layer (ADR-012). Tiny package;
  # `Neo4jGraphStore` is lazy-imported, so unit tests against the in-memory
  # fake do not exercise it. The driver is dormant until KW_NEO4J_URI is set.
  "neo4j>=5.23",
  "pdfplumber>=0.11",
  "pydantic==2.10.6",
  # Settings model that wraps `os.environ` reads behind a typed object
  # (issue #43). Pulls `python-dotenv` transitively but the repo does
  # not load `.env` files; settings are sourced from process env.
  "pydantic-settings>=2.6",
  "python-docx>=1.1",
  "python-multipart>=0.0.9",
  # python-pptx for the PPTX parser (#175). BSD-licensed; the parser
  # registry instantiates it at startup so the dep is required whenever
  # the API accepts the PPTX MIME (which the demo allowlist does).
  "python-pptx>=1.0",
  "pyyaml>=6.0",
  "uvicorn==0.30.6",
  # Voyage AI SDK for the optional knowledge layer Phase 3 embeddings
  # (ADR-015). Imported lazily by `VoyageEmbeddingClient`; unit tests
  # use `FakeEmbeddingClient` so the SDK is never called in the default
  # suite. The client refuses to construct without `VOYAGE_API_KEY`,
  # so this dep is dormant unless a deployment opts in.
  #
  # Pinned to `<0.3`: voyageai 0.3.x added `langchain-text-splitters`
  # as a runtime dependency, which transitively pulls `langchain-core`.
  # ADR-013 forbids LangChain anywhere in the install graph, so we
  # stay on the 0.2 line until upstream drops the LangChain edge.
  "voyageai>=0.2,<0.3",
]

[project.scripts]
# ``kw-demo`` boots ``uvicorn app.main:app`` with the demo-friendly
# defaults baked in (issue #130). See ``app/demo.py``.
kw-demo = "app.demo:main"

[project.optional-dependencies]
test = [
  "fpdf2>=2.7",
  "httpx==0.28.1",
  "mypy==1.13.0",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
]
# Optional spaCy NER enricher (#190 / closes the rest of #48). The
# default install never pulls these — operators install with
# ``pip install -e .[ner]`` and run ``python -m spacy download
# en_core_web_sm`` to actually load the model. The enricher itself is
# wired in :func:`app.dependencies.build_services` only when
# ``KW_NER_ENABLED=true`` is set, so the wheel size and import path
# stay slim for contributors who don't need person/org NER.
ner = [
  "spacy>=3.7",
]

# Restrict setuptools' flat-layout package discovery to the real
# Python package. Without this, the new `fixtures/demo/` directory
# (committed for the seed dataset, #131) would be auto-discovered
# as a second top-level package and `pip install -e .` fails with
# "Multiple top-level packages discovered". Tests / scripts /
# fixtures are not Python packages and don't ship with the wheel.
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "fixtures*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config -m 'not integration and not llm_integration and not embedding_integration'"
markers = [
  "integration: requires a running external service (e.g. Neo4j); opt-in via -m integration",
  "llm_integration: hits a real LLM API; opt-in via -m llm_integration",
  "embedding_integration: hits a real embedding API (Voyage); opt-in via -m embedding_integration",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F/W: pycodestyle + pyflakes (default). I: isort. UP: pyupgrade.
# B: bugbear (catches a handful of common Python bugs). C4: comprehensions.
# SIM: simplify. Adding rules later is the easy direction.
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses `Depends`, `File`, `Body`, etc. as argument defaults by design;
# these calls return marker objects, not stateful values.
extend-immutable-calls = [
  "fastapi.Body",
  "fastapi.Depends",
  "fastapi.File",
  "fastapi.Form",
  "fastapi.Header",
  "fastapi.Query",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
# Pragmatic — full strict mode is too aggressive for the first cut;
# we can ratchet later.
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["neo4j.*", "anthropic.*", "voyageai.*", "pdfplumber.*", "docx.*", "pptx.*", "fpdf.*", "yaml"]
ignore_missing_imports = true
